# hms_o2_trainer

./: README.md  TODO  pyproject.toml
.github/workflows/: test.yml
docs/: Makefile  basic_usage.rst  conf.py
hms_o2_trainer/: __init__.py  analysis.py  hparams.py  logging.py  progress.py  requeue.py  sbatch.py  train.sbatch  trainer.py  utils.py
hms_o2_trainer/diagnostics/shared_mem/: __main__.py  analysis.py  profiler.py
tests/: sinfo.stdout  test_hparams.py  test_sbatch.nt  test_sbatch.py  test_utils.py
