[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hms_o2_trainer"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = 'README.md'
dynamic = ["version", "description"]
requires-python = "~=3.10"
classifiers = [
  'Programming Language :: Python :: 3',
]
dependencies = [
  'lightning',
  'more_itertools',
  'torch',
]

[project.optional-dependencies]
test = [
  'pytest',
  'parametrize_from_file',
]
show = [
  'torchinfo',
  'torchlens',
]
plot = [
  'docopt',
  'matplotlib',
  'numpy',
  'polars',
  'scikit-learn',
  'scipy',
  'tbparse',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[project.scripts]
hot_sbatch = "hms_o2_trainer.sbatch:main"
hot_plot = "hms_o2_trainer.analysis:main"

[project.urls]
'Documentation' = 'https://hms-o2-trainer.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/hms_o2_trainer'
'Bug Tracker' = 'https://github.com/kalekundert/hms_o2_trainer/issues'
'Continuous Integration' = 'https://github.com/kalekundert/hms_o2_trainer/actions'
'Test Coverage' = 'https://app.codecov.io/github/kalekundert/hms_o2_trainer'

[tool.ruff.lint]
select = ["F"]
ignore = ["F405", "F403"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'
filterwarnings = [
  "ignore:pkg_resources is deprecated as an API",
  "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
]

[tool.coverage.run]
branch = true
parallel = true
source = ['hms_o2_trainer']

[tool.coverage.report]
exclude_lines = [
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
]

[tool.semantic_release]
version_variables = ['hms_o2_trainer/__init__.py:__version__']
build_command = 'python -m pip install build && python -m build'
major_on_zero = false
